Automate simple local setup for testing purpose
It needs a PHP version with native web server.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,3 +23,9 @@ add_custom_command(
 )
 
 include_directories( ${CMAKE_CURRENT_BINARY_DIR} )
+
+add_custom_target(
+  test-local
+  COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/../test/test-local.sh
+  DEPENDS phpfs
+)
