Change the project name in the source files

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,11 +1,11 @@
 cmake_minimum_required( VERSION 2.8 )
 find_package( PkgConfig )
 
-project( phpfs )
+project( httpfs )
 
 file( GLOB fuse_api fuse_api/*.c )
 file( GLOB core *.c )
-add_executable( phpfs ${core} ${fuse_api} template.php.h )
+add_executable( httpfs ${core} ${fuse_api} template.php.h )
 
 add_definitions( -Wall )
 
@@ -13,7 +13,7 @@ find_package( CURL )
 pkg_check_modules( FUSE REQUIRED fuse )
 add_definitions( ${FUSE_CFLAGS} -DFUSE_USE_VERSION=29 )
 
-target_link_libraries( phpfs ${CURL_LIBRARY} ${FUSE_LIBRARIES} )
+target_link_libraries( httpfs ${CURL_LIBRARY} ${FUSE_LIBRARIES} )
 
 add_custom_command(
   OUTPUT template.php.h
@@ -27,7 +27,7 @@ include_directories( ${CMAKE_CURRENT_BINARY_DIR} )
 add_custom_target(
   test-local
   COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/../test/test-local.sh
-  DEPENDS phpfs
+  DEPENDS httpfs
 )
 
-install( PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/phpfs DESTINATION bin )
+install( PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/httpfs DESTINATION bin )
