--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,9 +5,9 @@ cmake_minimum_required( VERSION 2.8 )
 find_package( PkgConfig )
 
 # sources
-file( GLOB fuse_api fuse_api/*.c )
-file( GLOB core *.c )
-file( GLOB templates RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}/templates/ templates/* )
+file( GLOB fuse_api lib/fuse_api/*.c )
+file( GLOB lib_src lib/*.c )
+file( GLOB templates RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}/lib/templates/ lib/templates/* )
 
 # process templates
 set( templates_h "" )
@@ -16,9 +16,9 @@ set( template_h ${template}.h )
 list( APPEND templates_h ${template_h} )
 add_custom_command(
   OUTPUT ${template_h}
-  COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/templates/${template} ${template}
+  COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/lib/templates/${template} ${template}
   COMMAND xxd -i ${template} ${template_h}
-  DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/templates/${template}
+  DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/lib/templates/${template}
 )
 endforeach( template )
 include_directories( ${CMAKE_CURRENT_BINARY_DIR} )
@@ -28,10 +28,15 @@ find_package( CURL )
 pkg_check_modules( FUSE REQUIRED fuse )
 add_definitions( ${FUSE_CFLAGS} -DFUSE_USE_VERSION=29 )
 
+# httpfs library
+add_library( httpfs STATIC ${lib_src} ${fuse_api} ${templates_h} )
+
 # compilation
-add_executable( httpfs ${core} ${fuse_api} ${templates_h} )
+include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/lib/ )
+add_executable( httpfs-bin main.c )
+set_target_properties( httpfs-bin PROPERTIES OUTPUT_NAME httpfs)
 add_definitions( -Wall )
-target_link_libraries( httpfs ${CURL_LIBRARY} ${FUSE_LIBRARIES} )
+target_link_libraries( httpfs-bin httpfs ${CURL_LIBRARY} ${FUSE_LIBRARIES} )
 
 # aux targets
 add_custom_target(
